fixed spacing between footer icons

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -177,8 +177,8 @@ body {
 .real-footer-section ul li {
   list-style: none;
   text-decoration: none;
-  margin-right: 25%;
-  margin-top: 30%;
+  margin-right: 50%;
+  margin-top: 40%;
 }
 .real-footer-section ul li a {
   padding: 7.5%;
